syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.regions.support.input";

import "plugins/properties/support.proto";
import "google/protobuf/any.proto";


message RegionIdInput {
    google.protobuf.Any id = 1;
}

message SimpleRegionIdInput {
    google.protobuf.Any value = 1;
}

message RegionPropertyIdInput {
    google.protobuf.Any id = 1;
}

message SimpleRegionPropertyIdInput {
    google.protobuf.Any value = 1;
}

message RegionMembershipInput {
    message RegionPersonInfo {
        int32 personId = 1;
        optional double arrivalTime = 3;
    }
    RegionIdInput regionId = 1;
    repeated RegionPersonInfo people = 2;
}

message RegionPropertyValueMapInput {
   RegionIdInput regionId = 1;
   repeated PropertyValueMapInput propertyValueMap = 2;
}

message RegionPropertyDimensionInput {
    RegionIdInput regionId = 1;
    RegionPropertyIdInput regionPropertyId = 2;
    repeated google.protobuf.Any values = 3;
}

message RegionFilterInput {
    repeated RegionIdInput regionIds = 1;
}
